--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "accesscontrol": "^2.2.1",
     "axios": "^1.4.0",
+    "bcrypt": "^5.1.0",
     "config": "^3.3.9",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
