--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "passport": "^0.6.0",
     "passport-jwt": "^4.0.1",
     "sequelize": "^6.32.1",
+    "sqlite3": "^5.1.6",
     "winston": "^3.10.0",
     "winston-daily-rotate-file": "^4.7.1"
   }
