--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "nodemailer": "^6.9.3",
     "passport": "^0.6.0",
     "passport-jwt": "^4.0.1",
+    "puppeteer": "^21.1.1",
     "sequelize": "^6.32.1",
     "sqlite3": "^5.1.6",
     "winston": "^3.10.0",
