--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "passport-jwt": "^4.0.1",
     "puppeteer": "^21.1.1",
     "sequelize": "^6.32.1",
+    "socket.io": "^4.7.2",
     "sqlite3": "^5.1.6",
     "winston": "^3.10.0",
     "winston-daily-rotate-file": "^4.7.1"
